--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 
-/************** NAVIGATION BAR ******************/
+/*************************************** NAVIGATION BAR *****************************/
  .logo {
      width:25%;
      display: flex;
@@ -20,7 +20,8 @@
      display:flex;
      position: sticky;
      top: 0;
-     height: 60px;
+     align-items: center;
+     justify-content: center;
 }
 
 .nav-list{
@@ -46,7 +47,7 @@
     color: grey;
 }
 .rightNav{
-    width:35%;
+    width:30%;
     padding: 12px 15px;
     text-align: right;
 }
@@ -152,7 +153,7 @@
     height:10%;
 
 }
-.form-boxx{
+/*.form-boxx{
     cursor: pointer;
     width: 1229px;
     height: 380px;
@@ -162,7 +163,8 @@
     background: black;
     padding: 5px;
     overflow: hidden;
-}
+}*/
+
 .form-boxx a{
     text-decoration: none;
 }
@@ -176,10 +178,11 @@
     height:253px;
     align-items: center;
     justify-content: center;
-    max-width: 90%;
+    max-width: 100%;
     justify-content: space-evenly;
     margin: auto;
     padding: 85px 84px; 
+    text-align: center;
 }
 .secLeft{
     background: rgb(0, 0, 0, 0.7) url('../Images/code2.jpg');
@@ -190,15 +193,16 @@
     height:253px;
     align-items: center;
     justify-content: center;
-    max-width: 90%;
+    max-width: 100%;
     justify-content: space-evenly;
     margin: auto;
     padding: 84px 84px; 
     flex-direction: row-reverse;
+    text-align: center;
 }
 .paras{
     padding: 60px 50px;
-    text-align: center;
+   
     color: white;
 }
 .sectionSubTag{
@@ -223,9 +227,7 @@
     background-size: cover;
     background-blend-mode: darken;
     font-family: 'Nunito', sans-serif;
-    height: 92vh;
     justify-content: center;
-    max-width: 90%;
     margin: auto;
     padding: 0px 67px;
 }
@@ -242,13 +244,11 @@
     padding: 20px;
     color: white;
     line-height: 1.5;
-    position:sticky;
+    position:scroll;
     max-width: 85%;
     height: 3%;
     text-align: center;
     font-family: 'Nunito', sans-serif;
-}
-.transImg{
     background: rgba(0, 0, 0, 0.7)
 }
 .secPart{
@@ -268,7 +268,6 @@
     display: block;
     margin: auto
 }
-
 
 /***************************************** ABOUT US PAGE ************************************/
 
@@ -308,7 +307,7 @@
 
 .contact{
     padding: 15px 0px;
-    background-color: #abc0c7;
+    background-color: #f3f8fa;
     height: 550px;
 }
 .text-center{
@@ -318,7 +317,7 @@
 }
 
 .form{
-    max-width: 800px;
+    max-width: 62%;
     margin: 42px auto;
 }
 .form-input{
@@ -333,7 +332,6 @@
     background-color: black;
     text-align: center;
     font-size: 15px;
-    display:flex;
     justify-content: center;
     padding: 12px 0px;
     color:white;
@@ -343,7 +341,7 @@
 /********************************** LOG IN AND REGISTRATION PAGE *******************************/
 
 .hero{
-    height: 110%;
+    height: 90%;
     width: 100%;
     background-position: center;
     position: absolute;
@@ -364,6 +362,7 @@
             width: 229px;
             margin: 35px auto;
             position: relative;
+            background: linear-gradient(to left, #ff105f,#ffad06);
             box-shadow: 0 0 20px 9px #f3581a1f;
             border-radius: 30px;
 }
@@ -385,6 +384,7 @@ background: linear-gradient(to right, #ff105f,#ffad06);
 border: 0;
 outline: none;
 border-radius: 30px; 
+color: white;
 }
 
 #button{
@@ -396,6 +396,7 @@ border-radius: 30px;
   background: linear-gradient(to right, #ff105f,#ffad06);
   border-radius: 30px;
   transition: .5s 
+  
 }
 .social-icons{
                padding : 0px 77px;
@@ -440,4 +441,79 @@ border-radius: 50px;
 }
 #register{
      left: 450px;
-}                       
+} 
+
+.burger{
+    display: none;
+   position: absolute;
+   cursor: pointer;
+   right: 5%;
+   top:15px;
+
+}
+.line{
+    width:33px;
+    background-color: white;
+    height: 4px;
+    margin: 3px 3px;
+}
+
+/**********************************************RESPONSIVENESS***********************************************/
+
+@media only screen and (max-width: 1140px){
+    .nav-list{
+        flex-direction: column;
+    }
+    .navbar{
+        flex-direction: column;
+        transition:all 0.7s ease-out ;
+        height: 345px;
+    }
+    #search{
+        width: 100%; 
+    }
+
+    .rightNav{
+        text-align: center;
+    }
+    .burger{
+        display: block;
+    }
+    .h-nav-resp{
+        height: 72px;
+    }
+    .v-class-resp{
+        opacity: 0;
+    }
+    /*************************************************/
+    .box-main{
+        flex-direction: column-reverse;
+        max-width: 100%;
+    }
+   .sectionSubTag{
+       font-size: 10px;
+   }
+   .text-big{
+       font-size: 20px;
+   }
+   .paras{
+       padding: 60px 0px;
+   }
+   .secLeft, .secRight{
+       padding: 84px 10px;
+       
+   }
+
+   /*******************************/
+   .form-box{
+       background-color: rgb(0, 0, 0, 0.0);
+       margin: 23% auto;
+
+    }
+    .hero{
+        color: white;
+    }
+    .social-icons img{
+        border:rgb(0, 0, 0, 0.7)
+    }
+}
